add image to taco recipe

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Taco Recipe</h1>
-    <img src="https://www.allrecipes.com/thmb/asxPfWr-PNWvnqA7_6qB9jkxSNc=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/21412-tiramisu-ii-DDMFS-4x3-cb78d4ad0e75477ebc2a16968c508fde.jpg" alt="Picture of a slice of tiramisu on a plate">
+    <img src="https://www.allrecipes.com/thmb/9whEhVLzNuPhTcKIUBRR68bWfjk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Easy-Chorizo-Street-Tacos-by-Allrecipes-Magazine-2000-defee40a5f96469499c369a9a3b77e80.jpg" alt="Picture of mexican style tacos on a plate">
     <h2>What is a Taco?</h2>
     <p>Tacos are a Mexican dish consisting of a fried tortilla, typically folded, filled with various mixtures, such as seasoned meat, beans, lettuce, and tomatoes. </p>
     <p>They are also yummy!</p>
