--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h2>All Recipes</h2>
     <ul>
         <li><a href="./recipes/tiramisu.html"> Tiramisu </a></li>
-        <li><a href="./recipes/tacos.html"> Tiramisu </a></li>
-        <li><a href="./recipes/verde-pork.html"> Tiramisu </a></li>
+        <li><a href="./recipes/tacos.html"> Tacos </a></li>
+        <li><a href="./recipes/verde-pork.html"> Chile Verde Pork </a></li>
     </ul>
 </body>
 </html>
